--- a/src/main/resources/public/css/admin.css
+++ b/src/main/resources/public/css/admin.css
@@ -10,7 +10,7 @@
 {
     background:#00948A;
     position:absolute;
-    height:100%;
+    height:100vh;
     width:200px;
     color:#fff;
     transition: margin-left 0.5s;
@@ -107,4 +107,5 @@
 .inner-content{
   property: inherit;
   padding: 20px;
+  width: inherit;
 }
